[gd_scene load_steps=7 format=3 uid="uid://dss8adpbaosnx"]

[ext_resource type="Script" path="res://scenes/PlayerControl.gd" id="1_vrpbm"]
[ext_resource type="Texture2D" uid="uid://bc1mhne6138fs" path="res://textures/tile-atlas.png" id="2_tsxo1"]
[ext_resource type="Script" path="res://scenes/HealthNode.gd" id="3_xytml"]
[ext_resource type="Script" path="res://scenes/HurtboxNode.gd" id="4_4lncp"]
[ext_resource type="Script" path="res://scenes/HitboxNode.gd" id="4_vykcl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qlpag"]
radius = 31.0

[node name="Player" type="CharacterBody2D"]
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_vrpbm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_qlpag")

[node name="CosmeticLayer" type="Node2D" parent="."]

[node name="Sprite" type="Sprite2D" parent="CosmeticLayer"]
texture = ExtResource("2_tsxo1")
region_enabled = true
region_rect = Rect2(192, 0, 64, 64)

[node name="HealthNode" type="Node2D" parent="."]
script = ExtResource("3_xytml")

[node name="HurtboxNode" type="Area2D" parent="."]
script = ExtResource("4_4lncp")

[node name="HitboxNode" type="Area2D" parent="."]
script = ExtResource("4_vykcl")
